add role dropdown

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
       <label id="number-label" for="age">Enter age (optional):
         <input  id="age" name="age" type="number" min="4" max="90" />
       </label>
+      <label id="role-label" for="role">Which option best describes your current role?
+        <select id="role" name="role">
+          <option value="1">Student</option>
+          <option value="2">Teacher</option>
+          <option value="3">Professional</option>
+          <option value="4">Retired</option>
+          <option value="0">Prefer not to say</option>
+        </select>
+      </label>
     </fieldset>
 
     <fieldset>
