For GitHub issue #5, center form and submit button

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         </label>
       </fieldset>
 
-      <input id="submit" type="submit" value="Submit Survey" />
+      <div class="submit">
+        <input id="submit" type="submit" value="Submit Survey" />
+      </div>
 
     </form>
   </div>
