add timeline and improve image styling

--- a/index.html
+++ b/index.html
@@ -13,22 +13,77 @@
         <h1 id="title">Tim Berners-Lee</h1>
         <h2 id="subtitle">Inventor of the Internet</h2>
 
-        <section id="image">
-            <div class="center">
+        <section id="intro">
+            <div class="centerimg">
                 <div id="img-div">
                     <img id="img"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Berners-Lee_announcing_W3F.jpg/220px-Berners-Lee_announcing_W3F.jpg"
+                        src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Berners-Lee_announcing_W3F.jpg"
                         alt="Tim Berners-Lee speaking" />
                     <br />
                     <caption id="img-caption">
-                        Tim Berners-Lee speaking at the launch of the World Wide Web Foundation
+                        Tim Berners-Lee speaking at the launch of the World Wide Web Foundation.
+                        <div class="attribution">
+                            <br />
+                            <a href="https://commons.wikimedia.org/wiki/File:Berners-Lee_announcing_W3F.jpg">
+                                Photo by Scott Henrichsen</a>,
+                            <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>,
+                            via Wikimedia Commons
+                        </div>
                     </caption>
                 </div>
             </div>
         </section>
 
-        <section id="timeline">
-
+        <section id="timeline_section">
+            <div class="centerdiv">
+                <div class="divTimeline">
+                    <ul id="timeline">
+                        <li>
+                            <span class="year">1955</span>
+                            <span class="timedetail">Born in London, England</span>
+                        </li>
+                        <li>
+                            <span class="year">1976</span>
+                            <span class="timedetail">BA Physics, Oxford</span>
+                        </li>
+                        <li>
+                            <span class="year">1980</span>
+                            <span class="timedetail">Initial Hypertext project at CERN</span>
+                        </li>
+                        <li>
+                            <span class="year">1980</span>
+                            <span class="timedetail">Works on network RPCs at Image Computer Systems, Ltd</span>
+                        </li>
+                        <li>
+                            <span class="year">1984</span>
+                            <span class="timedetail">Returns to CERN and links Hypertext with Network concepts</span>
+                        </li>
+                        <li>
+                            <span class="year">1990</span>
+                            <span class="timedetail">Proposes the World Wide Web as an amalgam of Internet routing,
+                                Hypertext, and multifont text. Hosts his proposal on the first Website. </span>
+                        </li>
+                        <li>
+                            <span class="year">1991</span>
+                            <span class="timedetail">Posts on Usenet a public invitation to the WorldWideWeb
+                                Project</span>
+                        </li>
+                        <li>
+                            <span class="year">1994</span>
+                            <span class="timedetail">Founds WC3 Consortium at MIT for royalty-free standards</span>
+                        </li>
+                        <li>
+                            <span class="year">2009</span>
+                            <span class="timedetail">Launches World Wide Web Foundation to "advance the Web to empower
+                                humanity"</span>
+                        </li>
+                        <li>
+                            <span class="year">2012</span>
+                            <span class="timedetail">Is honored at the Summer Olympics as the inventor of the Internet</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
         <section id="more">
