Final corrections to pass freeCodeCamp tests, and archive

--- a/index_Lab2.html
+++ b/index_Lab2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Tim Berners-Lee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="scripts.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -16,11 +16,11 @@
         <section id="intro">
             <div class="centerimg">
                 <div id="img-div">
-                    <img id="img"
+                    <img id="image"
                         src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Berners-Lee_announcing_W3F.jpg"
                         alt="Tim Berners-Lee speaking" />
                     <br />
-                    <caption id="img-caption">
+                    <figcaption id="img-caption">
                         Tim Berners-Lee speaking at the launch of the World Wide Web Foundation.
                         <div class="attribution">
                             <br />
@@ -29,7 +29,7 @@
                             <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>,
                             via Wikimedia Commons
                         </div>
-                    </caption>
+                    </figcaption>
                 </div>
             </div>
         </section>
@@ -79,14 +79,27 @@
                         </li>
                         <li>
                             <span class="year">2012</span>
-                            <span class="timedetail">Is honored at the Summer Olympics as the inventor of the Internet</span>
+                            <span class="timedetail">Is honored at the Summer Olympics as the inventor of the
+                                Internet</span>
                         </li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <section id="more">
+        <section id="tribute-info">
+            <hr />
+            <div class="center">
+                <p class="quote">
+                    "I just had to take the hypertext idea and connect it to the TCP and DNS ideas and—ta-da!—the World
+                    Wide
+                    Web."
+                    <br /><br/>
+                    --Tim Berners-Lee
+                </p>
+            </div>
+            <hr />
+            Learn more about Tim Berners-Lee on <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Tim_Berners-Lee#">Wikipedia</a>
 
         </section>
 
