--- a/index_Lab2.html
+++ b/index_Lab2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Tim Berners-Lee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles_lab2.css" />
 </head>
 
 <body>
